# HUBO-perception

./: README.md  rviz_conf.config.rviz
gazebo-world/: sim.world
image_parsing/: package.xml  setup.cfg  setup.py
image_parsing/image_parsing/: image_parsing.py
image_parsing/image_parsing/datasets/: .train.py.swp  classes.txt  data.yml  train.py
image_parsing/image_parsing/datasets/train/: labels.cache
image_parsing/image_parsing/datasets/train/labels/: IMG_9172.txt  IMG_9174.txt  IMG_9175.txt  IMG_9176.txt  IMG_9177.txt  IMG_9178.txt  IMG_9179.txt  IMG_9180.txt  IMG_9182.txt  IMG_9183.txt  IMG_9185.txt  IMG_9187.txt  IMG_9188.txt  IMG_9189.txt  IMG_9190.txt  IMG_9194.txt  IMG_9197.txt  IMG_9198.txt  IMG_9200.txt  IMG_9202.txt  IMG_9203.txt  IMG_9204.txt  IMG_9205.txt  IMG_9209.txt  IMG_9211.txt  IMG_9212.txt  IMG_9215.txt  IMG_9217.txt  IMG_9218.txt  IMG_9221.txt  IMG_9222.txt  (+143 more)
image_parsing/image_parsing/datasets/val/: labels.cache
pointcloud_pipe/: CMakeLists.txt  package.xml
pointcloud_pipe/src/: pipe.cpp
pointcloud_practice/: CMakeLists.txt  package.xml
pointcloud_practice/launch/: remote.launch.py  test.launch.py
pointcloud_practice/src/: pointcloud_practice.cpp
pointcloudac_node/: CMakeLists.txt  package.xml
pointcloudac_node/bts/: first_bt.xml
pointcloudac_node/src/: main.cpp  pcac.hpp
real_tf_broadcaster/: CMakeLists.txt  package.xml
real_tf_broadcaster/src/: real_tf_broadcaster.cpp
sim_tf_broadcaster/: CMakeLists.txt  package.xml
sim_tf_broadcaster/launch/: tf.launch.py
sim_tf_broadcaster/src/: sim_tf_broadcaster.cpp
(+197 files in other folders)
